force-app/main/default/objects/Product_Assisted_Growth__c/Product_Assisted_Growth__c.object-meta.xml
<CustomObject>
    <label>Product Based DealType</label>
    <nameField>
        <displayFormat>PAG-{000000}</displayFormat>
        <label>Product Assisted Growth Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Based DealTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>