force-app/main/default/objects/Product_Assisted_Growth__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Assisted Growth</relationshipLabel>
    <relationshipName>Product_Assisted_Growth</relationshipName>
    <type>Lookup</type>
</CustomField>