force-app/main/default/objects/Product_Assisted_Growth__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Latest Entitlement End Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>