force-app/main/default/objects/Product_Assisted_Growth__c/fields/Lost_Reason_Primary_Churn_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Primary_Churn_Reason__c</fullName>
    <description>Opportunity Lost Reason / Primary Churn Reason</description>
    <formula>Text( Opportunity__r.Lost_Reason__c )</formula>
    <label>Lost Reason / Primary Churn Reason</label>
    <type>Text</type>
</CustomField>