force-app/main/default/objects/Product_Assisted_Growth__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes related to PAG. to be added by AE/SE</description>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>