force-app/main/default/objects/Product_Assisted_Growth__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the related opportunity</description>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Assisted_Growth</relationshipName>
    <type>Lookup</type>
</CustomField>