force-app/main/default/objects/Product_Assisted_Growth__c/fields/Opportunity_Rubrik_Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Rubrik_Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rubrik Sales Engineer from Opportunity</description>
    <label>Opportunity Rubrik Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Assisted_Growth1</relationshipName>
    <type>Lookup</type>
</CustomField>