force-app/main/default/objects/Product_Assisted_Growth__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>Opportunity Stage</description>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>