force-app/main/default/objects/Product_Assisted_Growth__c/fields/Overage_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Overage_Product_Type__c</fullName>
    <description>SAL25-818 This field is created for PQL</description>
    <label>Overage Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>Unstructured</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>RCV</fullName>
            </value>
            <value>
                <fullName>OnPrem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>