force-app/main/default/objects/Product_Assisted_Growth__c/fields/PQL_External_Id__c.field-meta.xml
<CustomField>
    <fullName>PQL_External_Id__c</fullName>
    <description>SAL25-818 This field is created for PQL</description>
    <externalId>true</externalId>
    <label>PQL External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>