force-app/main/default/objects/Product_Assisted_Growth__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>SAL25-818</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAG</fullName>
            </value>
            <value>
                <fullName>PQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>