force-app/main/default/objects/Product_Assisted_Growth__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>PQL Score depicting Milestones status</description>
    <label>PAG Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>