force-app/main/default/objects/Product_Assisted_Growth__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Earliest Entitlement Start Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>