force-app/main/default/objects/Product_Assisted_Growth__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>PAG Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>