force-app/main/default/objects/Product_Assisted_Growth__c/fields/Total_Used_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Used_Capacity__c</fullName>
    <description>SAL25-818 This field is created for PQL</description>
    <label>Total Consumed/Used Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>