force-app/main/default/objects/Product_Assisted_Growth__c/fields/Trial_Duration__c.field-meta.xml
<CustomField>
    <fullName>Trial_Duration__c</fullName>
    <description>Duration of the Trial (in Days)</description>
    <label>Trial Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>