force-app/main/default/objects/Product_Assisted_Growth__c/fields/Trial_ID__c.field-meta.xml
<CustomField>
    <fullName>Trial_ID__c</fullName>
    <description>Stores the Trial ID received from Polaris System</description>
    <externalId>true</externalId>
    <label>Trial ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>