force-app/main/default/objects/Product_Assisted_Growth__c/fields/Trial_Ignored__c.field-meta.xml
<CustomField>
    <fullName>Trial_Ignored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if the customer has ignored the trial</description>
    <label>Is Trial Ignored</label>
    <type>Checkbox</type>
</CustomField>