force-app/main/default/objects/Product_Assisted_Growth__c/fields/Trial_type__c.field-meta.xml
<CustomField>
    <fullName>Trial_type__c</fullName>
    <description>Trial type</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M365</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>