force-app/main/default/objects/Product_Assisted_Growth__c/fields/Usage_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Usage_Dashboard__c</fullName>
    <description>Link to Polaris Usage Dashboard</description>
    <label>Usage Dashboard</label>
    <type>Url</type>
</CustomField>