force-app/main/default/objects/Product_Assisted_Growth__c/recordTypes/PAG.recordType-meta.xml
<RecordType>
    <fullName>PAG</fullName>
    <active>true</active>
    <description>Product Assisted Growth</description>
    <label>PAG</label>
</RecordType>