force-app/main/default/objects/Product_Assisted_Growth__c/recordTypes/PQL.recordType-meta.xml
<RecordType>
    <fullName>PQL</fullName>
    <active>true</active>
    <description>Product Qualified Lead (PQL)</description>
    <label>PQL</label>
</RecordType>